# CMPT305_Simple_Processor_Pipeline_Simulator

./: Makefile
cmake/: CMakeLists.txt
include/: Instruction.h  ReadTrace.h  Simulator.h
src/: ReadTrace.cpp  Simulator.cpp  main.cpp
